fixed grid alignment

--- a/styles.css
+++ b/styles.css
@@ -15,5 +15,5 @@
 }
 .card2 {
   text-align: center;
-  margin-left: 85px;
+  margin-left: 40px;
 }
